changed number to word

--- a/02-Methods.Rmd
+++ b/02-Methods.Rmd
@@ -504,7 +504,7 @@ ce_pop_table <- ce_populations_table()
 
 A subset of the individuals were chosen to create representative sample Polynesian populations of similar size to the other populations in the \gls{1kgp} to be used in a comparison for the selection analyses. \Glsentrydescplural{pc} were calculated for all individuals genotyped on the CoreExome \gls{snp} array using SmartPCA (EIGENSOFT v6.0.1, see section \@ref(pca)) using 2858 ancestry informative markers (@Guo2014 supplementary material). The first 10 eigenvectors were outputted, with no outlier removal or population size limit. Individuals were removed who did not match between self reported ethnicity of grandparents and their genetic ancestry, or if they had self reported all grandparent ethnicities as unknown.
 
-\Glsdesc{pc} 2 was identified as providing the best separation of European ancestry from Polynesian ancestry, and \gls{pc} 4 had the best separation of East Polynesian from West Polynesian ancestry. Individuals were then filtered for European or Polynesian ancestry. Individuals reporting 4 grandparents of European, New Zealand M\tex{\={a}}ori, Cook Island M\tex{\={a}}ori, Samoan, and Tongan ancestry were used to define the threshold values, as they were most likely to represent the ancestral populations. The mean and SD for \gls{pc} 2 and \gls{pc} 4 were calculated for the individuals who had self reported four grandparents of the same ethnicity. Thresholds were then applied using the four grandparent population mean $\pm$ 2 SD for \gls{pc} 2 and \gls{pc} 4 for each corresponding self-report population group. Samples were filtered so that only those that lay within the thresholds remained. Population samples of 100 individuals were created by using genetic ancestry for the following populations: \glsdesc{nzm}, \glsdesc{cim}, \glsdesc{sam}, \glsdesc{ton}, and \glsdesc{nzc}, by randomly sampling from within each ancestry group (Figure \@ref(fig:cePCA)). To create a population sample that resembled the general population for gout prevalence, individuals were prioritised based on gout affection to reach population specific prevalences based on @Winnard2013 of 2.3% for \gls{nzc}, 7.7% for \gls{nzm}, and 8.6% for \gls{cim}, \gls{sam}, and \gls{ton}. Final sample population prevalence of 2.0% (\gls{nzc}), 7.0% (\gls{nzm}), 45.0% (\gls{cim}), 12.0% (\gls{sam}), and 54.0% (\gls{ton}) were obtained for gout (Table \@ref(tab:cePopTable)).
+\Glsdesc{pc} 2 was identified as providing the best separation of European ancestry from Polynesian ancestry, and \gls{pc} 4 had the best separation of East Polynesian from West Polynesian ancestry. Individuals were then filtered for European or Polynesian ancestry. Individuals reporting four grandparents of European, New Zealand M\tex{\={a}}ori, Cook Island M\tex{\={a}}ori, Samoan, and Tongan ancestry were used to define the threshold values, as they were most likely to represent the ancestral populations. The mean and SD for \gls{pc} 2 and \gls{pc} 4 were calculated for the individuals who had self reported four grandparents of the same ethnicity. Thresholds were then applied using the four grandparent population mean $\pm$ 2 SD for \gls{pc} 2 and \gls{pc} 4 for each corresponding self-report population group. Samples were filtered so that only those that lay within the thresholds remained. Population samples of 100 individuals were created by using genetic ancestry for the following populations: \glsdesc{nzm}, \glsdesc{cim}, \glsdesc{sam}, \glsdesc{ton}, and \glsdesc{nzc}, by randomly sampling from within each ancestry group (Figure \@ref(fig:cePCA)). To create a population sample that resembled the general population for gout prevalence, individuals were prioritised based on gout affection to reach population specific prevalences based on @Winnard2013 of 2.3% for \gls{nzc}, 7.7% for \gls{nzm}, and 8.6% for \gls{cim}, \gls{sam}, and \gls{ton}. Final sample population prevalence of 2.0% (\gls{nzc}), 7.0% (\gls{nzm}), 45.0% (\gls{cim}), 12.0% (\gls{sam}), and 54.0% (\gls{ton}) were obtained for gout (Table \@ref(tab:cePopTable)).
 
 
 ```{r,echo = FALSE}
