fixed citations on pages 5, 42, and 86

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -58,7 +58,7 @@ Natural selection seems to be the more popular model to the neutral hypothesis, 
 
 ### Selection
 
-Possible types of selection that can act upon a population include balancing, background, or directional selection. Balancing selection maintains both alleles in a population and is often the case when the heterozygote has an advantage over the homozygote and can be referred to as "over-dominant selection". Two examples of this are MHC class 1 [@Hughes1988] and sickle-cell anaemia [@Allison1956]. With sickle-cell anaemia, individuals homozygous for normal haemoglobin alpha are susceptible to malaria, individuals homozygote for the 'sickling' mutation develop sickle-cell disease, and the heterozygote has a protective effect against malarial infection [Aidoo2002]. "Background selection" is a reduction of genetic diversity at a locus because of deleterious selection acting on a separate but linked locus [@Charlesworth1993]. Background selection can be thought of as the opposite effect to genetic hitch-hiking. Genetic hitch-hiking occurs when a locus is under selection, linked sites on the same chromosome will increase in frequency, causing a change in frequency of the alleles that are not on the same chromosome [@Smith1974]. \Gls{ld} can arise at sites that are under directional selection, even when the loci are unlinked [@Felsenstein1965] but, recombination will act to reduce this \gls{ld}. 
+Possible types of selection that can act upon a population include balancing, background, or directional selection. Balancing selection maintains both alleles in a population and is often the case when the heterozygote has an advantage over the homozygote and can be referred to as "over-dominant selection". Two examples of this are MHC class 1 [@Hughes1988] and sickle-cell anaemia [@Allison1956]. With sickle-cell anaemia, individuals homozygous for normal haemoglobin alpha are susceptible to malaria, individuals homozygote for the 'sickling' mutation develop sickle-cell disease, and the heterozygote has a protective effect against malarial infection [@Aidoo2002]. "Background selection" is a reduction of genetic diversity at a locus because of deleterious selection acting on a separate but linked locus [@Charlesworth1993]. Background selection can be thought of as the opposite effect to genetic hitch-hiking. Genetic hitch-hiking occurs when a locus is under selection, linked sites on the same chromosome will increase in frequency, causing a change in frequency of the alleles that are not on the same chromosome [@Smith1974]. \Gls{ld} can arise at sites that are under directional selection, even when the loci are unlinked [@Felsenstein1965] but, recombination will act to reduce this \gls{ld}. 
 
 Directional selection operates in two fashions, positive or negative. Positive selection is where an allele conveys an advantage in fitness that enhances reproductive success, resulting in the beneficial allele increasing in frequency within the population. An example of positive selection is the lactase gene in European populations which enables the absorption of lactose [@Bersaglieri2004]. Negative selection occurs when the allele conveys a fitness disadvantage and ends with reduced reproductive success, decreasing the frequency of the allele in the population. The cystic fibrosis gene _CFTR_, is an example of negative selection, where in males splicing mutations can lead to sterility [@Pagani2005].
 
