--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -54,7 +54,7 @@ The "Thrifty genotype hypothesis" was originally hypothesised by @Neel1962, wher
 
 ### Selection in urate and gout
 
-The benefits of urate include the its ability to increase blood pressure and it is thought to have helped early hominins to stand upright [@Watanabe2002] and increase blood flow to the brain. Serum urate is also a potent anti-oxidant which accounts for >50% of the anti-oxidant activity of the blood [@Glantzounis2005; @Parmar2009]. Mono-sodium urate crystals that form in conditions of elevated urate are a potent adjuvant for the immune system and enhances the immune response [@Ames1981; @Optiz2009]. Uric acid has also been identified as being an important part of the malarial response, contributing to cytokine secretion and response of dendritic and T-cells [@GallegoDelgado2014].
+The benefits of urate include the its ability to increase blood pressure and it is thought to have helped early hominins to stand upright [@Watanabe2002] and increase blood flow to the brain. Serum urate is also a potent anti-oxidant which accounts for >50% of the anti-oxidant activity of the blood [@Glantzounis2005; @Parmar2009]. Mono-sodium urate crystals that form in conditions of elevated urate are a potent adjuvant for the immune system and enhances the immune response [@Ames1981; @Opitz2009]. Uric acid has also been identified as being an important part of the malarial response, contributing to cytokine secretion and response of dendritic and T-cells [@GallegoDelgado2014].
 
 <!-- - Possible reasons for the loss @Alvares-Lario2010 -->
 <!--     - urate helps raise bp, this would have been beneficial in low salt environments, helped early hominins stand @Wantannabe? -->
@@ -71,7 +71,7 @@ An increased level of urate in the blood is called \gls{hu} and is causal of gou
 
 \Gls{hu} has two main components: overproduction of urate, and under-excretion. Overproduction is influenced by diet, such as high purine or fructose content, or increased cell turnover as observed in cancer, or under genetic control. Under-excretion is the main cause of \gls{hu}, caused by either increased reabsorption or decreased secretion. The kidneys are the organ where the majority of secretion and excretion of urate is performed, with about 90% of urate being reabsorbed [@Kutzing2008]. In the proximal tubule, on the apical membrane, the urate transporters of URAT1, OAT4, and SLC2A9 reabsorb urate, whereas ABCC4, NPT4, and NPT1 are responsible for secretion [@Mandal2015]. On the basolateral membrane, OAT1-3, increase intracellular uric acid, but SLC2A9 moves uric acid from intracellular to extracellular [@Mandal2015]. The ATP powered transporter ABCG2 is responsible for excretion of urate in the gut and there are \glspl{snp} that lead to a reduction of function in ABCG2 in all populations [@Phipps-Green2010;@Cleophas2017]. Together the genes _SLC2A9_ and _ABCG2_ account for 3.4% of the genetic variability of urate [@Kottgen2013].
 
-From previous studies there is prior evidence of selection at urate associated loci [@Zhang2013a; @Grossman2013; @Ramos2017]. In the review from @Ramos2017 on natural selection in rheumatic disease, one of the main loci for gout, _SLC2A9_, in the \gls{yri} population was reported as having been selected. The region of _BCAS3_ and _NACA2_ also had evidence, originally found by @Grossman2013 in the Asian population from the HapMap project data. @Zhang2013a had evidence for the urate-associated loci of _ATXN2_ (rs653178) and _RREB1_ (rs675209) having undergone selection when using a F~ST~-based method. The co-morbidities of \gls{hu} also show signs of selection, with loci associated with \gls{t2d} having been reported as having undergone selection [@pickrell2009signals; @voight2006map; @Grossman2010, @Grossman2013]. Most recently a Samoan specific variant in _CREBRF_ that is protective for \gls{t2d} but causal for obesity has also been identified as having evidence of selection in the Samoan population [@Minster2016].
+From previous studies there is prior evidence of selection at urate associated loci [@Zhang2013a; @Grossman2013; @Ramos2017]. In the review from @Ramos2017 on natural selection in rheumatic disease, one of the main loci for gout, _SLC2A9_, in the \gls{yri} population was reported as having been selected. The region of _BCAS3_ and _NACA2_ also had evidence, originally found by @Grossman2013 in the Asian population from the HapMap project data. @Zhang2013a had evidence for the urate-associated loci of _ATXN2_ (rs653178) and _RREB1_ (rs675209) having undergone selection when using a F~ST~-based method. The co-morbidities of \gls{hu} also show signs of selection, with loci associated with \gls{t2d} having been reported as having undergone selection [@pickrell2009signals; @voight2006map; @Grossman2010; @Grossman2013]. Most recently a Samoan specific variant in _CREBRF_ that is protective for \gls{t2d} but causal for obesity has also been identified as having evidence of selection in the Samoan population [@Minster2016].
 
 <!-- need to reword as too many used of "has evidence"-->
 
@@ -3193,7 +3193,7 @@ As discussed in @Gosling2014, the thrifty-gene hypothesis in the context of the 
 ### Selection in malaria associated loci in Polynesian populations
 
 
-Malaria is endemic in the southwest Pacific, extending out to the east as far as Vanuatu, but is absent and awlays had been absent, further west in Polynesia [@Clark1993]. There is evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania, through which the Polynesian ancestors would have passed through prior to settlement of the Pacfic [@Clark1993;]. In Polynesia, where malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies, though genrally in island groups where malaria remains extant [@Cappellini2008;@Flint1986].
+Malaria is endemic in the southwest Pacific, extending out to the east as far as Vanuatu, but is absent and awlays had been absent, further west in Polynesia [@Clark1993]. There is evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania, through which the Polynesian ancestors would have passed through prior to settlement of the Pacfic [@Clark1993]. In Polynesia, where malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies, though genrally in island groups where malaria remains extant [@Cappellini2008;@Flint1986].
 
 Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. 
 
