--- a/abstract.tex
+++ b/abstract.tex
@@ -2,6 +2,6 @@
 
 Serum urate has been associated with metabolic disorders such as obesity, \gls{t2d}, renal disease and metabolic syndrome. It is hypothesised that serum urate may have undergone positive selection in Polynesians due to some of the beneficial properties, such as its role as an anti-oxidant, or as an adjuvant for the innate immune system. New Zealand Polynesians have inherently elevated serum urate levels and increased rates of gout. This thesis presents the results of a genome-wide study of selection in Polynesian (and other) populations, focusing on testing the hypothesis that genomic loci containing genes involved in urate processing have undergone selection.
 
-There was no evidence of wide-spread selection at genes associated with urate and gout, or related metabolic disorders, but there was evidence at some individual loci. Pathway analysis showed that were enriched for genes with signatures of selection, had a dominance of metabolic pathways. Calcium related transport and signaling was a theme amongst loci that displayed signs of possible selection. Regions of the genome that were possibly selected in modern-day Polynesian populations also had similarities to those of modern-day East Asian populations.
+There was no evidence of wide-spread selection at genes associated with urate and gout, or related metabolic disorders, but there was evidence at some individual loci. Pathway analysis showed that were enriched for genes with signatures of selection, had a dominance of metabolic pathways. Calcium related transport and signalling was a theme amongst loci that displayed signs of possible selection. Regions of the genome that were possibly selected in modern-day Polynesian populations also had similarities to those of modern-day East Asian populations.
 
 This thesis has provided identification and characterisation of regions in the genome with possible evidence of genetic selection in Polynesian populations, that previously was not available. It has also provided insight into the role of genetic selection with respect to urate and metabolic disease.
