--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,5 +1,5 @@
 
-It takes a village to undertake research is certainly an appropriate paraphrase to encapsulate the numerous people who have contributed to the research presented in this thesis who deserve to be acknowledged. Firstly a large thank-you goes to my supervisors, Professor Tony Merriman, and Associate Professor Mik Black, you have had the most direct impact on this project in helping form and shape the direction and offering excellent advice. I am highly appreciative of the time you have spent mentoring, and the opportunities offered.
+It takes a village to undertake research is certainly an appropriate paraphrase to encapsulate the numerous people who have contributed to the research presented in this thesis who deserve to be acknowledged. Firstly, a large thank-you goes to my supervisors, Professor Tony Merriman, and Associate Professor Mik Black, you have had the most direct impact on this project in helping form and shape the direction and offering excellent advice. I am highly appreciative of the time you have spent mentoring, and the opportunities offered.
 
 To my committee members, Professor Lisa Matisoo-Smith and Dr Phillip Wilcox, you were crucial in keeping me on track and providing additional guidance.
 
@@ -7,7 +7,7 @@ I would also like to thank the members of the Merriman Lab, you provided a wonde
 
 Acknowledgement and thanks go to the participants of the studies that were used in this thesis. Thanks also needs to go to NeSI, who provided the computational resources, and to the Virtual Institute of Statistical Genomics, who provided my scholarship stipend.
 
-Thanks to my friends and family, your support has been highly appreciated. Ben, thank you for being there as a close friend and brother-in-law, for the chats and beers, and in which we could unqiuely have a shared thesis writing experience together. Mum and dad, and Richard and Dianne, thank you for providing loving supportive spaces to come, crash and decompress.
+Thanks to my friends and family, your support has been highly appreciated. Ben, thank you for being there as a close friend and brother-in-law, for the chats and beers, and in which we could uniquely have a shared thesis writing experience together. Mum and dad, and Richard and Dianne, thank you for providing loving supportive spaces to come, crash and decompress.
 
 To Isobel and Esther, my amazing daughters, you have brought so much joy and inspired me during the tough times. I hope I can inspire you, as you do for me.
 
