--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -42,7 +42,7 @@ ukbio_gout <- bd_refined_gout %>% filter(f.eid %in% fam$V2) %>% select(goutaff, 
 
 This chapter investigates the performance of different gout case definitions on a \gls{gwas}. It also looks at how selection statistics could be used for the prioritisation of variants from a \gls{gwas}.
 
-A subset of these results have been published as part of @Cadzow2017; the gout definition testing, heritability of gout, and the replication of the @Kottgen2013 results for gout, using the UK Biobank data. The results and discussion from that paper have been included and expanded on here.
+A subset of these results were published as part of @Cadzow2017; the gout definition testing, heritability of gout, and the replication of the @Kottgen2013 results for gout, using the UK Biobank data. The results and discussion from that paper have been included and expanded on here.
 
 
 
@@ -70,7 +70,7 @@ A subset of these results have been published as part of @Cadzow2017; the gout d
 
 Genome-wide association studies provide a statistical framework on a genomic scale for an association analysis between a phenotype of interest, and the genotypes of a genetic marker, generally using linear regression for a continuous trait, or logistic regression for a dichotomous trait [@Lee2011;@Zuk2012]. The association test, in a \gls{gwas} context, is repeated for all available markers across the genome. In epidemiological studies the use of an accurate case definition is important [@Olijhoek2007], however, there is variation in the gout definitions used from the multi-purpose cohort studies that are used for genetic analysis. Multi-purpose cohort studies are cohorts that are collected in a way that enables the use of the data to answer many different research questions; some well known cohorts include the \gls{wtccc} cohort, the \gls{aric} study, and the \gls{fhs} [@Burton2007;@Aric1989; @Splansky2007]. 
 
-The use of a consistent case definition is also important for genetic analyses using multiple cohorts. If the definition is consistent then it is possible to combine the genetic data from each cohort and performing the \gls{gwas}, allowing for increased sample size and therefore increased power. Another common way of combining genetic association studies is through meta-analysis. In both instances, having the same case definitions across studies reduces the variation. The power of genetic case-control studies increases with accurate case definition. The use of gold-standard case definitions means that there are the maximum number of genuine cases, and the maximum number of disease free controls [@Colhoun2003]. For gout, the gold standard case definition is the presence of mono-sodium urate crystals in the synovial fluid of the joint [@Wallace1977a], measurement of which is not possible for multi-purpose cohorts. A substitute for crystals in the synovial fluid is the \gls{acr} criteria [@Wallace1977a]. These criteria require a minimum of six of twelve conditions to be met for an individual to be classed as a 'case'. It is uncommon for multi-purpose cohorts to report either the gold-standard, or \gls{acr} criteria, but instead, for a self-report diagnosis of conditions and diseases to be reported.
+The use of a consistent case definition is also important for genetic analyses using multiple cohorts. If the definition is consistent then it is possible to combine the genetic data from each cohort and performing the \gls{gwas}, allowing for increased sample size and therefore increased power. Another common way of combining genetic association studies is through meta-analysis. In both instances, having the same case definitions across studies reduces the variation. The power of genetic case-control studies increases with accurate case definition. The use of gold-standard case definitions means that there are the maximum number of genuine cases, and the maximum number of disease-free controls [@Colhoun2003]. For gout, the gold standard case definition is the presence of mono-sodium urate crystals in the synovial fluid of the joint [@Wallace1977a], measurement of which is not possible for multi-purpose cohorts. A substitute for crystals in the synovial fluid is the \gls{acr} criteria [@Wallace1977a]. These criteria require a minimum of six of twelve conditions to be met for an individual to be classed as a 'case'. It is uncommon for multi-purpose cohorts to report either the gold-standard, or \gls{acr} criteria, but instead, for a self-report diagnosis of conditions and diseases to be reported.
 
 The UK Biobank is a publicly available data set consisting of 500,000 individuals, mostly of European ancestry, from around the United Kingdom, aged between 40 and 69. It contains genetic, health, and lifestyle information. As part of the UK Biobank collection process, participants filled in detailed surveys on health and lifestyle questions, provided biological samples, and provided access to administrative health records. The UK Biobank includes the self-report diagnoses that were collected by survey at the time of recruitment, but it also has hospital admission information, for both primary and secondary diagnosis. This collection of both self-report information combined with hospital admission information provides a unique opportunity in a large cohort to investigate possible gout definitions and their influence on \gls{gwas}.
 
@@ -107,7 +107,7 @@ The objectives of this chapter are to:
 ### European Gout GWAS {#ukbbgwas}
 
 <!-- acr report using unfiltered controls -->
-This \gls{gwas} was performed using the interim data release from the UK Biobank (approval number 12611) downloaded November 2015. There was genetic information for `r formatC(NROW(fam), big.mark = ',', big.interval = 3, digits = 0)` individuals. For the \gls{gwas} itself, it was limited to be only people who had self reported an ethnic background of British, Irish, or 'any other white background' to limit the effect of genetic ancestry confounding the analysis.
+This \gls{gwas} was performed using the interim data release from the UK Biobank (approval number 12611) downloaded November 2015. There was genetic information for `r formatC(NROW(fam), big.mark = ',', big.interval = 3, digits = 0)` individuals. For the \gls{gwas} itself, it was limited to be only people who had self-reported an ethnic background of British, Irish, or 'any other white background' to limit the effect of genetic ancestry confounding the analysis.
 
 Inclusion criteria were: European ethnicity, aged between 40 and 69 years, and having genome wide genotypes available. The exclusion criteria used were: mismatch between self-reported sex and genetic sex, genotype quality control failure, relatedness, or either a primary or secondary hospital diagnosis of kidney disease (International Classification of Diseases, Tenth Revision (ICD-10), codes I12, I13, N00-N05, N07, N11, N14, N17–N19, Q61, N25.0, Z49, Z94.0, Z99.2), participants aged 70 years and over, and those with kidney disease, because these are risk factors for secondary gout.
 
@@ -123,7 +123,7 @@ A replication cohort was created from the full UK Biobank genetic dataset by usi
 
 #### Gout definitions
 
-Four main classification criteria were used to define gout cases. _Hospital defined gout_ involved either a primary or secondary hospital diagnosis for gout (ICD-10 code M10, including sub-codes). _Self-report of gout_ was defined as reporting having gout at the time of the study interview with a nurse, in response to the question "In the touch screen you selected that you have been told by a doctor that you have other serious illnesses or disabilities, could you now tell me what they are?"^[http://biobank.ctsu.ox.ac.uk/crystal/docs/Interview.pdf accessed 28 May 2018]. _Use of \gls{ult}_ used self-report data for the use of allopurinol, febuxostat, or sulphinpyrazone, and not having a hospital diagnosis of leukaemia or lymphoma (ICD-10 codes C81-C96). _Winnard defined gout_ was based on @Winnard2012 and consisted of a hospital diagnosis of gout, or self report of gout specific medication (\gls{ult} or colchicine). The largest number of people were classified through either self-report or the use of urate lowering therapy (Figure \@ref(fig:ukbbupsetplot)). Additional exclusion criteria were applied to participants not classified as having gout from these definitions in order to remove possible cases from the control cohort. The criteria were cortico-steroidal use, non-steroidal anti-inflammatory drug use or probenicid use. The UK Biobank replication cohort used the gout definition of self-reported gout or self reported \gls{ult} use to define cases.
+Four main classification criteria were used to define gout cases. _Hospital defined gout_ involved either a primary or secondary hospital diagnosis for gout (ICD-10 code M10, including sub-codes). _Self-report of gout_ was defined as reporting having gout at the time of the study interview with a nurse, in response to the question "In the touch screen you selected that you have been told by a doctor that you have other serious illnesses or disabilities, could you now tell me what they are?"^[http://biobank.ctsu.ox.ac.uk/crystal/docs/Interview.pdf accessed 28 May 2018]. _Use of \gls{ult}_ used self-report data for the use of allopurinol, febuxostat, or sulphinpyrazone, and not having a hospital diagnosis of leukaemia or lymphoma (ICD-10 codes C81-C96). _Winnard defined gout_ was based on @Winnard2012 and consisted of a hospital diagnosis of gout, or self-report of gout specific medication (\gls{ult} or colchicine). The largest number of people were classified through either self-report or the use of urate lowering therapy (Figure \@ref(fig:ukbbupsetplot)). Additional exclusion criteria were applied to participants not classified as having gout from these definitions in order to remove possible cases from the control cohort. The criteria were cortico-steroidal use, non-steroidal anti-inflammatory drug use or probenecid use. The UK Biobank replication cohort used the gout definition of self-reported gout or self-reported \gls{ult} use to define cases.
 
 Confidence intervals for proportions of each gout definition out of the combination of all gout definitions were calculated using the \texttt{prop.test} function from the _stats_ package in R.
 
@@ -183,7 +183,7 @@ ukbb_female_n$n_hosp <- ukbio_gout %>% filter(goutaff ==1 & gouthosp == 1 & sex 
 A \gls{gwas} was performed using logistic regression in Plink1.9b [@plink2; @Chang2015] for each gout classification, with age, sex, and \gls{bmi} as co-variates. The association results for each \gls{gwas} were then compared with the 30 \glspl{snp} reported in Table 1 of @Kottgen2013 that had previously been associated with urate and gout in a cohort of >140,000 Europeans. 
 
 
-#### Heritabililty
+#### Heritability
 
 For each gout classification, the genetic component of heritability explained was calculated. This was done by first randomly selecting 10,000 controls and then combining this same subset with cases from each of the gout classifications. The genetic variance was calculated for each chromosome separately and then combined. The dichotomous case-control phenotype was transformed onto a continuous liability scale using the restricted maximum likelihood analysis function in the GCTA software (v1.26.0, @Yang2011part) and a general population prevalence of gout of 2% (section \@ref(gctaHeritability)). The liability scale operates on a liability threshold model whereby an unseen continuous trait has a threshold above which one is a case [@Lee2011; @Zuk2012]. Heritability estimates were compared using the formula h~1~ - h~2~ and the SE calculated using formula \@ref(eq:h2se).
 
@@ -203,7 +203,7 @@ poly_phenos <- read_delim('~/data/PolyGwas/coreEx_phenos021216.txt', delim = '\t
 ```
 
 
-The \gls{gwas} was performed for gout using individuals with Polynesian ancestry. Gout affection was determined by the \gls{acr} criteria [@Wallace1977a], or a doctor diagnosis, or if enrolled in a gout drug trial. All participants were older than 18, and provided informed written consent. Exclusion criteria included unknown gout affection status, non-Polynesian self-reported ancestry, or a mismatch between self-reported ancestry and \gls{pca} clustering. The \gls{gwas} was adjusted for age, sex, and the first ten \glspl{pc} calculated from 2,858 ancestry informative markers (as identified by Illumina and used in @Guo2014). Markers were removed if the minor allele frequency was less than 0.01, or had an \gls{hwe} chi-squared exact test P < 1x10^-6^. The \gls{gwas} was conducted by Dr Tanya Major(Merriman Lab) using Plink v1.9b32.
+The \gls{gwas} was performed for gout using individuals with Polynesian ancestry. Gout affection was determined by the \gls{acr} criteria [@Wallace1977a], or a doctor diagnosis, or if enrolled in a gout drug trial. All participants were older than 18, and provided informed written consent. Exclusion criteria included unknown gout affection status, non-Polynesian self-reported ancestry, or a mismatch between self-reported ancestry and \gls{pca} clustering. The \gls{gwas} was adjusted for age, sex, and the first ten \glspl{pc} calculated from 2,858 ancestry informative markers (as identified by Illumina and used in @Guo2014). Markers were removed if the minor allele frequency was less than 0.01, or had a \gls{hwe} chi-squared exact test P < 1x10^-6^. The \gls{gwas} was conducted by Dr Tanya Major (Merriman Lab) using Plink v1.9b32.
 
 
 <!-- polynesian_gout-affection.pheno -->
@@ -402,11 +402,11 @@ nom_snps$winnard <- winnard_asb %>% filter(P < 1e-5) %>% pull(SNP)
 nom_snps$ult <- ult_asb %>% filter(P < 1e-5) %>% pull(SNP)
 ```
 
-#### UK Biobank gout defintions GWAS
+#### UK Biobank gout definitions GWAS
 
 The total number of genome-wide significant \glspl{snp} was `r nom_snps$hosp %>% length()` for the hospital definition, `r nom_snps$self %>% length()` for the self-reported gout definition, `r nom_snps$ult %>% length()` for the \gls{ult} use definition, `r nom_snps$winnard %>% length()` for the Winnard definition, and `r nom_snps$selfult %>% length()` for the self-reported gout or \gls{ult} use definition. There was considerable overlap between the definitions in the \glspl{snp} that met the nominal significance threshold of P < 1x10^-5^ (Figure \@ref(fig:ukOverlap)). There were five main regions of the genome that had peaks of association with gout. These were at _GCKR_ on chromosome 2, _SLC2A9_ and _ABCG2_ on chromosome 4, the _SLC17A1-SLC17A3_ region on chromosome 6, and the _SLC22A11-SLC22A12_ region on chromosome 11 (Figure \@ref(fig:manhatSelfUltAgeSexBmi)). Only the peaks at _SLC2A9_ and _ABCG2_ reached genome-wide significance under the hospital definition.
 
-There were a total of ten top \glspl{snp} from seven genes that were associated with gout at a genome-wide significance threshold, across the definitions used (Table \@ref(tab:ukgwas)). The top \gls{snp} for each locus differed between definitions for _GCKR_ and _SLC2A9_, and _SLC22A12_. _GCKR_ had the top \gls{snp} (rs780093) for self-report of gout, self-report of gout or \gls{ult} use, or \gls{ult} , whereas the top \gls{snp} for the Winnard definition was rs780094. The top \gls{snp} was rs9994216 in _SLC2A9_ for the self-reported gout definition, and rs4697701 for the \gls{ult} usage, self-report of gout, and the Winnard definitions. _SLC22A12_ had rs11231837 for the top \gls{snp} for the self-reported gout and self-reported gout or \gls{ult} use definitions, whereas rs7929627 was the top \gls{snp} for the \gls{ult} usage, and Winnard definitions. None of the top \glspl{snp} were the same as reported by @Kottgen2013 in Table 1. This can largely be explained by the top \glspl{snp} reported here being associated with gout, whereas @Kottgen2013 Table 1 was for urate.
+There were a total of ten top \glspl{snp} from seven genes that were associated with gout at a genome-wide significance threshold, across the definitions used (Table \@ref(tab:ukgwas)). The top \gls{snp} for each locus differed between definitions for _GCKR_ and _SLC2A9_, and _SLC22A12_. _GCKR_ had the top \gls{snp} (rs780093) for self-report of gout, self-report of gout or \gls{ult} use, or \gls{ult}, whereas the top \gls{snp} for the Winnard definition was rs780094. The top \gls{snp} was rs9994216 in _SLC2A9_ for the self-reported gout definition, and rs4697701 for the \gls{ult} usage, self-report of gout, and the Winnard definitions. _SLC22A12_ had rs11231837 for the top \gls{snp} for the self-reported gout and self-reported gout or \gls{ult} use definitions, whereas rs7929627 was the top \gls{snp} for the \gls{ult} usage, and Winnard definitions. None of the top \glspl{snp} were the same as reported by @Kottgen2013 in Table 1. This can largely be explained by the top \glspl{snp} reported here being associated with gout, whereas @Kottgen2013 Table 1 was for urate.
 
 <!-- Where the top \gls{snp} differed between definitions part of the difference can be attributed to genotyping rates. In the case of _GCKR_ and _SLC22A12_ the variants were in complete \gls{ld} but had slightly different genotyping rates.  -->
 
@@ -863,11 +863,11 @@ polyhaplogwas %>%
 
 The UK Biobank had a larger number of cases for the gout \gls{gwas} than @Kottgen2013. This increase in cases reflects the increase in strength of association that was seen. A similar comparison of gout definitions was performed using data from the study for updated gout and classification criteria (SUGAR) with 983 rheumatology patients with known gout affection and definitions derived from epidemiology studies used in the Global Urate Genetics Consortium \gls{gwas} of hyperuricaemia and gout were tested for sensitivity and specificity [@Dalbeth2016]. In the SUGAR paper, the definition that provided the highest specificity (82%) and sensitivity (72%) was self-reported gout or on \gls{ult} when tested against the mono-sodium urate crystal identification as the gold standard. Consistent with this, the work presented here found that the self-report of gout or \gls{ult} use definition also provided the highest precision from the definitions used, and supports the use of this definition in genetic studies  when better gout classification methods are not available, such as \gls{acr} criteria or mono-sodium urate crystal identification.
 
-The different definitions of gout used in this study may represent the different disease presentations or patient populations. Not all patients were captured by all criteria, and the Winnard definition was not as good as self-report of gout or \gls{ult}, despite a similarity in definitions, and also had lower precision in the genetic association. The hospital diagnosis definition had the lowest prevalence and was restrictive, making it the least likely to capture most people with gout. One third of the people that met this definition did not meet any of the self-report definitions, for gout, and/or \gls{ult} usage. There are a number of reasons that might explain this. Firstly the hospitalised population may have a different disease presentation from those in the community identified by self-report or \gls{ult} use. Secondly, a diagnosis of gout made in a hospital may subsequently be revised to a different diagnosis; this is not taken into account with the current methodology. Therefore, when self report information is available it is recommended that the self-report of gout or \gls{ult} use be used as the way to define cases.
+The different definitions of gout used in this study may represent the different disease presentations or patient populations. Not all patients were captured by all criteria, and the Winnard definition was not as good as self-report of gout or \gls{ult}, despite a similarity in definitions, and had lower precision in the genetic association. The hospital diagnosis definition had the lowest prevalence and was restrictive, making it the least likely to capture most people with gout. One third of the people that met this definition did not meet any of the self-report definitions, for gout, and/or \gls{ult} usage. There is a number of reasons that might explain this. Firstly, the hospitalised population may have a different disease presentation from those in the community identified by self-report or \gls{ult} use. Secondly, a diagnosis of gout made in a hospital may subsequently be revised to a different diagnosis; this is not taken into account with the current methodology. Therefore, when self-report information is available it is recommended that the self-report of gout or \gls{ult} use be used as the way to define cases.
 
 Each of the gout definitions tested had genome-wide significance for \glspl{snp} associated with gout in _ABCG2_ and _SLC2A9_. These two genes encode proteins that transport urate in the gut (ABCG2) and proximal tubule of the kidney (SLC2A9). The large effect sizes in the association with gout, show similarity with their large effect sizes in the control of serum urate levels [@Kottgen2013].
 
-Heritability estimates for the variance attributed to the additive effects of common \glspl{snp} for gout of 0.282-0.308 (excluding the hospital definition) were in line with those reported by @Kottgen2013, with the same approach using the GCTA software of 0.27 to 0.41 for serum urate levels. There was also no statistically significant differences between the heritability estimates for the different definitions. The comparability between the heritability estimates for gout and serum urate by common genetic variants suggests the genetic heritabilities of serum urate levels and gout is similar. However, also contributing to the risk of gout are environmental factors, such as diet and medications. Because the estimates are constructed under an additive model, it does not account for the non-additive variance, such as gene-gene or gene-environment interactions, or rare variants, or the effect of structural variants such as copy number variation.
+Heritability estimates for the variance attributed to the additive effects of common \glspl{snp} for gout of 0.282-0.308 (excluding the hospital definition) were in line with those reported by @Kottgen2013, with the same approach using the GCTA software of 0.27 to 0.41 for serum urate levels. There was also no statistically significant differences between the heritability estimates for the different definitions. The comparability between the heritability estimates for gout and serum urate by common genetic variants suggest the genetic heritabilities of serum urate levels and gout is similar. However, also contributing to the risk of gout are environmental factors, such as diet and medications. Because the estimates are constructed under an additive model, it does not account for the non-additive variance, such as gene-gene or gene-environment interactions, or rare variants, or the effect of structural variants such as copy number variation.
 
 
 
@@ -894,7 +894,7 @@ The combination of the New Zealand Polynesian gout \gls{gwas} with the haplotypi
 
 <!-- > Rs12908919 (_PPCDC_) was the only \gls{snp} that had more than one Polynesian population with both \gls{ihs} and \gls{nsl} in the top 5%. _PPCDC_ encodes phosphopantothenoylcysteine decarboxylase -->
 
-The _IBSP/PKD2/ABCG2_ region has been associated with both gout and urate levels [@Yang2010], but often just the lead \gls{snp} of rs2231142 is reported, as it has the strongest association and is one of the most likely causative variants due to the Q141K amino acid change that leads to a reduction in expression and a less efficient transporter [@Woodward2009]. The _IBSP_ locus encodes bone sialoprotein, which is involved with bone development [@Kerr1993]. Loci nearby such as _MEPE_ and _SPP1_, encode proteins with similar structure and functions, suggesting a shared evolutionary history [@Rowe2000]. In the presence of urate crystals, as with gout, _IBSP_ expression is reduced and affects osetoblast differentiation [@Chhana2011]. _PKD2_ is involved with kidney disease [@Mochizuki1996; @Hildebrandt2010], and Polynesian populations have a 3.5 fold higher incidence of end-stage renal disease, compared to Europeans [@Collins2017book]. For all the variants that had both selection and \gls{gwas} signal at _PKD2_, the selection signal was for the ancestral allele, which was also the risk allele for gout. The selection signal was absent in the Eastern Polynesian populations, which displayed selection statistics in favour of the derived/protective gout alleles at _PKD2_. As previously discussed (section \@ref(selectionDissussion)), many of the loci that have evidence suggesting selection in Western Polynesian populations are calcium channels. The _IBSP/PKD2/ABCG2_ region, is functionally involved with calcium, bone sialoprotein has a high affinity for calcium [@Kerr1993], and PKD2 has some homology with calcium channels, containing domains that are consistent with calcium binding [@Mochizuki1996], again demonstrating this calcium-related selection pattern. 
+The _IBSP/PKD2/ABCG2_ region has been associated with both gout and urate levels [@Yang2010], but often just the lead \gls{snp} of rs2231142 is reported, as it has the strongest association and is one of the most likely causative variants due to the Q141K amino acid change that leads to a reduction in expression and a less efficient transporter [@Woodward2009]. The _IBSP_ locus encodes bone sialoprotein, which is involved with bone development [@Kerr1993]. Loci nearby such as _MEPE_ and _SPP1_, encode proteins with similar structure and functions, suggesting a shared evolutionary history [@Rowe2000]. In the presence of urate crystals, as with gout, _IBSP_ expression is reduced and affects osteoblast differentiation [@Chhana2011]. _PKD2_ is involved with kidney disease [@Mochizuki1996; @Hildebrandt2010], and Polynesian populations have a 3.5 fold higher incidence of end-stage renal disease, compared to Europeans [@Collins2017book]. For all the variants that had both selection and \gls{gwas} signal at _PKD2_, the selection signal was for the ancestral allele, which was also the risk allele for gout. The selection signal was absent in the Eastern Polynesian populations, which displayed selection statistics in favour of the derived/protective gout alleles at _PKD2_. As previously discussed (section \@ref(selectionDissussion)), many of the loci that have evidence suggesting selection in Western Polynesian populations are calcium channels. The _IBSP/PKD2/ABCG2_ region, is functionally involved with calcium, bone sialoprotein has a high affinity for calcium [@Kerr1993], and PKD2 has some homology with calcium channels, containing domains that are consistent with calcium binding [@Mochizuki1996], again demonstrating this calcium-related selection pattern. 
 
 
 <!-- Tony: ADAM10 - any nominal evidence for assocation with SU/gout? -->
@@ -923,9 +923,9 @@ The _IBSP/PKD2/ABCG2_ region has been associated with both gout and urate levels
 
 ### Limitations
 
-In the analysis of the different gout definitions, there was a difference between the the definitions in the number of \glspl{snp} that had a significant association with gout, with the hospital diagnosis definition having the fewest. One of the key differences between the definitions was the number of cases defined for each, ranging from 382 to 2295, which will have impacted on the power for each \gls{gwas} to detect associations. Similar to the \gls{gwas} results from the different gout definitions, the differences between heritability estimates of the different definitions may too be impacted by the differing numbers of cases. Due to computational reasons, only a sub-sample of the controls was used in the calculation of the heritability estimates. The use of all of the controls may have changed the results of the heritability analysis. Another limitation of the definitions was the lack of 'gold standard' to which the definitions could be compared, and therefore sensitivity and specificity was unable to be calculated for each definition. The ancestry of the UK Biobank samples included for the gout definitions were European, this means that results and conclusions from the definition and heritability analysis may not be applicable to other ancestral backgrounds. 
+In the analysis of the different gout definitions, there was a difference between the the definitions in the number of \glspl{snp} that had a significant association with gout, with the hospital diagnosis definition having the fewest. One of the key differences between the definitions was the number of cases defined for each, ranging from 382 to 2295, which will have impacted on the power for each \gls{gwas} to detect associations. Similar to the \gls{gwas} results from the different gout definitions, the differences between heritability estimates of the different definitions may too be impacted by the differing numbers of cases. Due to computational reasons, only a sub-sample of the controls was used in the calculation of the heritability estimates. The use of all of the controls may have changed the results of the heritability analysis. Another limitation of the definitions was the lack of 'gold standard' to which the definitions could be compared, and therefore sensitivity and specificity were unable to be calculated for each definition. The ancestry of the UK Biobank samples included for the gout definitions were European, this means that results and conclusions from the definition and heritability analysis may not be applicable to other ancestral backgrounds. 
 
-With the combination of the selection statistics with the results of the gout \gls{gwas} analyses, the variants that were able to be compared were limited by the selection analysis, where the selection results were only from the markers that were available on the CoreExome \gls{snp} array. This is despite the UK Biobank \gls{gwas} being conducted on an imputed dataset, where there were results for 9.3 million markers after filtering. This compared to the total number of 236,868 markers for which there were \gls{ihs} or \gls{nsl} results. It is possible that if there were \gls{ihs} and \gls{nsl} results for a greater number of markers, more loci may have been prioritised. The Polynesian \gls{gwas} was limited by sample size, and also in the number of markers for which there were both association and selection results.The marker density of the CoreExome \gls{snp} array could have been improved through imputation, however, for Polynesian populations, the public haplotype reference panels lack representation of Polynesian populations. This means that Polynesian specific variants (such as rs373863828, @Minster2016) and therefore haplotypes, are not incorporated in the imputation, and as a result the imputation accuracy suffers [@Howie2011]. 
+With the combination of the selection statistics with the results of the gout \gls{gwas} analyses, the variants that were able to be compared were limited by the selection analysis, where the selection results were only from the markers that were available on the CoreExome \gls{snp} array. This is despite the UK Biobank \gls{gwas} being conducted on an imputed dataset, where there were results for 9.3 million markers after filtering. This compared to the total number of 236,868 markers for which there were \gls{ihs} or \gls{nsl} results. It is possible that if there were \gls{ihs} and \gls{nsl} results for a greater number of markers, more loci may have been prioritised. The Polynesian \gls{gwas} was limited by sample size, and also in the number of markers for which there were both association and selection results. The marker density of the CoreExome \gls{snp} array could have been improved through imputation, however, for Polynesian populations, the public haplotype reference panels lack representation of Polynesian populations. This means that Polynesian specific variants (such as rs373863828, @Minster2016) and therefore haplotypes, are not incorporated in the imputation, and as a result the imputation accuracy suffers [@Howie2011]. 
 
 The combination of the Eastern and Western Polynesian populations into a single grouped population for the \gls{gwas} may also affect the results, as there are population specific effects, even between similar ancestral backgrounds such as the East and West Polynesian populations. Such differences with respect to gout have been seen with _ABCG2_ [@Phipps-Green2010]. This was similar to what was observed in the selection results at the extended locus including _IBSP, PKD2, and ABCG2_ displaying a difference between Eastern and Western Polynesian populations. One method to take into account these differences between the Eastern and Western Polynesian populations, would be to perform the \gls{gwas} separately in each and then meta-analyse the results.
 
