--- a/06-Conclusion_discussions.Rmd
+++ b/06-Conclusion_discussions.Rmd
@@ -10,7 +10,7 @@ Chapter \@ref(selectionResults) utilised multiple selection and neutrality stati
 
 The enriched pathway in common between the Western Polynesian populations was ABC transporters. The loci, _ABCG2_ and _ABCC4_, that encode for two ABC transporters, have previously had genetic variants identified that increase risk of gout in Western Polynesian populations [@Phipps-Green2010;@Tanner2017]. _ABCC4_ has also had a Western Polynesian specific \gls{snp} (rs972711951) identified that associated with gout [@Tanner2017], and there was evidence of possible selection at this locus, from \gls{cim}, \gls{nzm}, and \gls{sam}.
 
-The loci that exhibited 'signatures of selection' in Polynesian populations, that were also associated with urate were limited, and there was minimal evidence for the main effect loci for urate and gout of _SLC2A9_ and _ABCG2_. Instead the loci that indicated possible selection included _RREB1_, _IGFR1_ and _BCAS3_, none of which are urate transporters but instead are involved with more central metabolic pathways. The other metabolic diseases of obesity, \gls{t2d}, kidney disease, and metabolic syndrome all had a number of associated loci that also had evidence of possible selection. Some of these loci were associated with multiple traits, and also had an immunological function. This points to a potential relationship of these loci being influenced by pathogenic challenge, that results in influence on metabolic diseases. One example of this potential relationship could be loci that were associated with obesity and \gls{t2d}, that were also associated with malarial infection. One of the genes, _DDC_, that was putatively associated with malaria, had one of the strongest \gls{ihs} signals in \gls{nzm}. 
+The loci that exhibited 'signatures of selection' in Polynesian populations, that were also associated with urate were limited, and there was minimal evidence for the main effect loci for urate and gout of _SLC2A9_ and _ABCG2_. Instead the loci that indicated possible selection included _RREB1_, _IGFR1_ and _BCAS3_, none of which are urate transporters but instead are involved with more central metabolic pathways. The other metabolic diseases of obesity, \gls{t2d}, kidney disease, and metabolic syndrome all had a number of associated loci that also had evidence of possible selection. Some of these loci were associated with multiple traits, and had an immunological function. This points to a potential relationship of these loci being influenced by pathogenic challenge, that results in influence on metabolic diseases. One example of this potential relationship could be loci that were associated with obesity and \gls{t2d}, that were also associated with malarial infection. One of the genes, _DDC_, that was putatively associated with malaria, had one of the strongest \gls{ihs} signals in \gls{nzm}. 
 
 Due to urate having a central role in malaria infection and functioning as an adjuvant for the innate immune system [@Ames1981;@Opitz2009], as well as previously having been identified a selective pressure applied to the genome, malaria associated genes were investigated for signals of selection in Polynesian populations. Three loci that had associations with malaria, to varying degrees, showed possible evidence for selection through haplotypic statistics, these were _ABO_, _ATP2B4_, and _DDC_. The blood antigen locus of _ABO_, has a suggested mechanism for how a red blood cell displaying the type A or B antigen may increase cytoadherence with a malaria infected cell, increasing the infectivity of _Plasmodium falciparum_ [@Cserti2015]. However, this may be limited in benefit to regions that have a high frequency of O type such as Melanesia, and not for Polynesian populations [@Simmons1962;@Zerihun2011].
 
@@ -52,11 +52,11 @@ Unfortunately, two previously identified loci (_PPARGC1A_ and _CREBRF_) which ha
 <!-- - the eas super population was most similar to pol, consistent with the current migration history -->
 <!-- - baised distributions against singletons/low freq variants -->
 
-Chapter \@ref(clustering) was an investigation into the genetic similarities of populations in the regions that lay in the extremes of the selection and neutrality statistic distributions. This chapter added to the evidence that the modern-day Polynesian populations had genetic similarities to modern day East Asian populations, and from the migration and settlement histories have a shared ancestry. There was also evidence from all of the clustering methodologies that while the Polynesian populations were most similar to each other in a global context, there were in fact genetic differences between the East and West Polynesian populations, a finding also reported by @Hudjashov2018.
+Chapter \@ref(clustering) was an investigation into the genetic similarities of populations in the regions that lay in the extremes of the selection and neutrality statistic distributions. This chapter added to the evidence that the modern-day Polynesian populations had genetic similarities to modern day East Asian populations, and from the migration and settlement histories have a shared ancestry. There was also evidence from all the clustering methodologies that while the Polynesian populations were most similar to each other in a global context, there were in fact genetic differences between the East and West Polynesian populations, a finding also reported by @Hudjashov2018.
 
 The \glsdesc{pca}, used to partition the variance of the genetic data, where each subsequent \glsdesc{pc} captures smaller amounts of variance, showed that the first four components could be used to explain the genetic variation that separated the populations into their geographically based super population groups. The first component captured the difference of the \gls{afr} populations and all the other populations. The second component captured the difference between the \gls{eur} populations and the \gls{eas}, \gls{sas}, and \gls{pol} populations. The third component captured the variation responsible for separating the \gls{eas} from the \gls{pol} populations. And the forth component captured the genetic variation that separated the \gls{sas} and \gls{amr} populations from each other, and other populations.
 
-The selection and neutrality statistics showed that populations within a super population were most similar to one another, with the greatest differences being between super populations. There was also evidence of a shared ancestry in both the frequency spectrum of variants, as well as with haplotypes that was consistent with the Out of Africa migration and subsequent population movements. There was not however a specific signal for selection that appeared in the Polynesian populations for urate or any of the metabolic disease associated loci, but instead a commonality between the frequency spectrum of similar geographic populations. The extremes of the frequency based selection and neutrality statistics showed that there was similarity in the regions of the genome within a super population, but the regions that were in the extremes differed between super populations. This suggested that local adaptations were geographically restricted [@Gravel2011].
+The selection and neutrality statistics showed that populations within a super population were most similar to one another, with the greatest differences being between super populations. There was also evidence of a shared ancestry in both the frequency spectrum of variants, as well as with haplotypes that was consistent with the Out of Africa migration and subsequent population movements. There was not however a specific signal for selection that appeared in the Polynesian populations for urate or any of the metabolic disease associated loci, but instead a commonality between the frequency spectrum of similar geographic populations. The extremes of the frequency-based selection and neutrality statistics showed that there was similarity in the regions of the genome within a super population, but the regions that were in the extremes differed between super populations. This suggested that local adaptations were geographically restricted [@Gravel2011].
 
 
 
@@ -83,7 +83,7 @@ Chapter 5 investigated the use of gout definitions that were common amongst mult
 
 ## Significance
 
-Investigations of selection in different populations have yielded several population specific genetic adaptations. Some examples of adaptations with evidence of selection include lactase in European populations [@Bersaglieri2004], pigmentation in South Asian populations [@Jonnalagadda2017], altitude adaptations in Tibetans [@Huerta-Sanchez2014], adaptations to climate in Greenlanders [@Fumagalli2015], and most recently adaptations for diving in the Bajau people [@Ilardo2018]. 
+Investigations of selection in different populations have yielded several population-specific genetic adaptations. Some examples of adaptations with evidence of selection include lactase in European populations [@Bersaglieri2004], pigmentation in South Asian populations [@Jonnalagadda2017], altitude adaptations in Tibetans [@Huerta-Sanchez2014], adaptations to climate in Greenlanders [@Fumagalli2015], and most recently adaptations for diving in the Bajau people [@Ilardo2018]. 
 
 The health disparities that affect Polynesian populations, such as the high burden of metabolic diseases like obesity, \gls{t2d}, renal disease, and gout are important to understand and address. Determining the origin of population genetic differences has the potential to lead to new insights for the biological model. Looking at genetic selection can help explain how these population genetic differences came to be. This thesis is the first to conduct a genome-wide scan for regions of genetic selection, and to identify and characterise selection through a range of selection statistics, in multiple Polynesian populations. The population sample sizes are also some of the largest for Polynesia compared to other studies [@Kimura2008;@Friedlaender2008;@Skoglund2016;@Hudjashov2018]. From these genome-wide selection scans, there was evidence of metabolic pathways being enriched for genes displaying signals of selection. But importantly, the genes that were associated with urate and gout that displayed the most evidence of possible selection, were not urate transporters, but genes that also had associations with other metabolic diseases.  
 
@@ -91,12 +91,12 @@ Research into the genetic ancestry of populations, and in particular Polynesian 
 
 Recommendations around the use of gout definition in genetic studies, when the gold-standard gout diagnosis or other clinical based criteria (\gls{acr} criteria) are not available. When individual level genetic data is available, this can assist in pooling genetic data between studies, rather than performing meta-analysis. The heritability of gout was also confirmed to be similar to that of urate.
 
-The incorporation of selection statistics provided another method to prioritise variants from \gls{gwas}. Exploring additional options such as these is important, especially when sample sizes for \gls{gwas} in Polynesian populations are unlikely to ever be large enough to have the power to detect all of the small effect loci that contribute to complex genetic diseases such as gout. The analysis of combining selection statistics with \gls{gwas} indicated it has potential by aiding in providing additional evidence for known loci, but did not aid in the discovery of new gout-associated variants. Broadening the types of selection statistics used might provide different results.
+The incorporation of selection statistics provided another method to prioritise variants from \gls{gwas}. Exploring additional options such as these is important, especially when sample sizes for \gls{gwas} in Polynesian populations are unlikely to ever be large enough to have the power to detect all of the small effect loci that contribute to complex genetic diseases such as gout. The analysis of combining selection statistics with \gls{gwas} indicated it has potential by aiding in providing additional evidence for known loci but did not aid in the discovery of new gout-associated variants. Broadening the types of selection statistics used might provide different results.
 
 
 ## Study limitations
 
-One of the major limitations of this research project was the reliance on \gls{snp} array data. Ideally whole genome sequencing would have been used, however, Polynesian populations are generally under-represented in large sequencing projects. A clear demonstration of the benefit of using sequence data over \gls{snp} array data is with the _CREBRF_ variant, where rs373863828 was specific to Polynesian populations [@Minster2016; @Krishnan2018] and not represented in my analysis. Using \gls{snp} array data impacted on all aspects of the selection statistics analysis. The marker density of the \gls{snp} array meant that the windowed statistics had a small number of markers per window, compared to the HapMap data, and also whole genome sequence data giving the highest density. This meant that the minimum number of markers of four was conveying signal for 100 kb regions of the genome. The data from the CoreExome \gls{snp} array could have been imputed, however, due to the Polynesian specific variant, and therefore haplotypes not being present in the reference panel haplotypes, the imputation quality would be affected. The impact of this, beyond the potential for false haplotypes to be introduced is still unknown. The trade-off benefit of having an increased density of markers versus the increased probability of incorrect haplotypes has not been quantified, as the specificity of haplotypes in Polynesian populations is unknown.
+One of the major limitations of this research project was the reliance on \gls{snp} array data. Ideally whole genome sequencing would have been used, however, Polynesian populations are generally under-represented in large sequencing projects. A clear demonstration of the benefit of using sequence data over \gls{snp} array data is with the _CREBRF_ variant, where rs373863828 was specific to Polynesian populations [@Minster2016; @Krishnan2018] and not represented in my analysis. Using \gls{snp} array data impacted on all aspects of the selection statistics analysis. The marker density of the \gls{snp} array meant that the windowed statistics had a small number of markers per window, compared to the HapMap data, with whole genome sequence data giving the highest density. This meant that the minimum number of markers of four was conveying signal for 100 kb regions of the genome. The data from the CoreExome \gls{snp} array could have been imputed, however, due to the Polynesian specific variant, and therefore haplotypes not being present in the reference panel haplotypes, the imputation quality would be affected. The impact of this, beyond the potential for false haplotypes to be introduced is still unknown. The trade-off benefit of having an increased density of markers versus the increased probability of incorrect haplotypes has not been quantified, as the specificity of haplotypes in Polynesian populations is unknown.
 
 Another limiting factor for the analyses in chapters \@ref(selectionResults), \@ref(clustering) and \@ref(selGwas), was the focus on positive selection. This focus came from the hypothesis that urate had been beneficial in the past. However, other types of selection are also relevant to complex genetic diseases, and influence the genome [@Andres2009a; @Daub2013]. On top of selection, there is also the possibility of random genetic drift, population expansions, bottlenecks, and migrations that all play a role in shaping the genome.
   
@@ -139,11 +139,11 @@ Selection is not the only explanation for genetic differences between population
 ## Future directions
 
 
-Future work in this area would include the generation of a high quality set of Polynesian whole genome sequences that could be used to remove the ascertainment bias introduced through the \gls{snp} arrays. High quality sequences could also be used to supplement the reference haplotype panels that are currently available to include haplotypes that are specific to Polynesian populations which could then be used improved haplotype phasing, and for imputation of Polynesian specific variants.
+Future work in this area would include the generation of a high-quality set of Polynesian whole-genome sequences that could be used to remove the ascertainment bias introduced through the \gls{snp} arrays. High quality sequences could also be used to supplement the reference haplotype panels that are currently available to include haplotypes that are specific to Polynesian populations which could then be used improved haplotype phasing, and for imputation of Polynesian specific variants.
 
-If sequence data were available then the use of some of the newer statistics such as the population branching statistic [@Yi2010b], singleton density score [@Field2016], and levels of exclusively shared differences [@Librado2018] could be made use of, which are designed for detecting selection on more recent time-scales. 
+If sequence data were available, then the use of some of the newer statistics such as the population branching statistic [@Yi2010b], singleton density score [@Field2016], and levels of exclusively shared differences [@Librado2018] could be made use of, which are designed for detecting selection on more recent time-scales. 
 
-Comparing the present day East Asian and Polynesian populations with ancient Polynesian DNA could prove useful in determining areas of the genome that differ, to refine the regions of the genome that have changed since population divergence, and subsequent changes in the Polynesian populations. Comparisons with Denisovian and Neanderthal data could also be used to investigate the impact introgression has had on the Polynesian populations, or if regions that showed signs of selection were also similar to regions of introgression.
+Comparing the present day East Asian and Polynesian populations with ancient Polynesian DNA could prove useful in determining areas of the genome that differ, to refine the regions of the genome that have changed since population divergence, and subsequent changes in the Polynesian populations. Comparisons with Denisovan and Neanderthal data could also be used to investigate the impact introgression has had on the Polynesian populations, or if regions that showed signs of selection were also similar to regions of introgression.
 
 Investigating the use of selection statistics with \gls{gwas} could still prove fruitful if other statistics and methodologies were incorporated that allowed for cross-population comparisons, especially in situations where there are differences in the disease prevalence between populations. This could be further improved by inclusion of expression quantitative trait loci information, and regulatory elements to assess if the markers and regions identified in the selection analyses have known impact on gene expression, or are tissue specific. Furthermore, replication of this analysis in other sample Polynesian populations, and the use of population simulations would be beneficial to increase the confidence in the regions that displayed evidence of possible selection.
 
@@ -157,7 +157,7 @@ Investigating the use of selection statistics with \gls{gwas} could still prove 
 
 Overall, it was shown that there was evidence suggesting positive selection in Polynesian populations with some of the regions including loci associated with urate and metabolic diseases. Further evidence was shown for the modern-day Polynesian populations being most similar to modern day East Asian populations, with there being a degree of similarity in the regions displaying signatures of selection. It was also shown that selection statistics could be used to group populations of similar ancestry.
 
-Identification of additional gout-associated loci in \gls{gwas} was limited when selection statistics were incorporated, but the number of statistics used was not exhaustive so expansion of the statistics used, particularly cross-populational statistics, may yield different results. It is also shown that the use of self-reported gout or \gls{ult} usage to define gout-cases in a case-control genetic association study gave the best performance, in the absence of the gold-standard gout diagnosis, or \gls{acr} criteria.
+Identification of additional gout-associated loci in \gls{gwas} was limited when selection statistics were incorporated, but the number of statistics used was not exhaustive, so expansion of the statistics used, particularly cross-populational statistics, may yield different results. It is also shown that the use of self-reported gout or \gls{ult} usage to define gout-cases in a case-control genetic association study gave the best performance, in the absence of the gold-standard gout diagnosis, or \gls{acr} criteria.
 
 This thesis has provided identification and characterisation of regions of the genome that displayed "signatures of selection" in Polynesian populations, that was previously unavailable. It has also provided insight into the role of selection with respect to urate and metabolic disease. 
 
